--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,13 +36,13 @@
     <header>
 	<nav class="mnu navbar-light">
             <div class="logo" id="logo">
-                <h1 class="heading-agileinfo"><a href="index.html"><font color:"black">Feedback Form</font></a></h1>
+                <h1 class="heading-agileinfo"><a href=""><font color:"black">Feedback Form</font></a></h1>
             </div>
 				<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
                 <input type="checkbox" id="drop">
                     <ul class="menu">
-                        <li class="mr-lg-4 mr-3 active"><a href="index.html">Home</a></li>
-						<li class="mr-lg-4 mr-3"><a href="about.html">About</a></li>
+                        <li class="mr-lg-4 mr-3 active"><a href="index/">Home</a></li>
+						<li class="mr-lg-4 mr-3"><a href="about/">About</a></li>
                         <!-- <li class="mr-lg-4 mr-3"><a href="services.html">Services</a></li> -->
 						<li class="mr-lg-4 mr-3">
                             <!-- First Tier Drop Down -->
@@ -52,11 +52,11 @@
                             <ul>
                               <!-- <li><a href="typo.html">Typography</a>
                                 </li> -->
-                                <li><a href="gallery.html">Gallery</a>
+                                <li><a href="gallery/">Gallery</a>
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="contact.html">Contact-Us</a></li>
+                        <li><a href="contact/">Contact-Us</a></li>
                         <li><a href="http://127.0.0.1:8000/student/">Login</a></li>
                     </ul>
     </nav>
