--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -12,7 +12,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <title>Indoctrination Education Category Flat Bootstrap Responsive website Template | Gallery :: w3layouts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
-    <meta name="keywords" content="Indoctrination Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+    <meta name="keywords" content="Indoctrination Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 	SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
     <script>
         addEventListener("load", function () {
@@ -24,8 +24,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         }
     </script>
     <!-- Custom Theme files -->
-    <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+    <link href="{% static 'home/bootstrap.css' %}" type="text/css" rel="stylesheet" media="all">
+    <link href="{% static 'home/style.css' %}" type="text/css" rel="stylesheet" media="all">
 	<!-- font-awesome icons -->
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
 	<!-- //Custom Theme files -->
@@ -38,7 +38,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- banner -->
     <div class="inner-banner">
          <!-- header -->
-    <header>	
+    <header>
 	<nav class="mnu navbar-light">
             <div class="logo" id="logo">
                 <h1><a href="index.html">Feedback <span>Form</span></a></h1>
@@ -55,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <a href="#">Works <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul>
-                              
+
                                 <li><a href="gallery.html">Gallery</a>
                                 </li>
                             </ul>
@@ -66,7 +66,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </nav>
 </header>
 <!-- //header -->
-        
+
     </div>
 	 <!-- //banner-text -->
 	 	<!--Gallery-->
@@ -328,7 +328,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"></div>
 					</div>
 				</div> -->
-				
+
 			</div>
 		</div>
 	</footer>
