--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -25,7 +25,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </script>
     <!-- Custom Theme files -->
     <link href="{% static 'home/css/bootstrap.css' %} " type="text/css" rel="stylesheet" media="all">
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+    <link href="{% static 'home/style.css' %}" type="text/css" rel="stylesheet" media="all">
 	 <!-- font-awesome icons -->
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
 	<!-- //Custom Theme files -->
