--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -11,7 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <title>Indoctrination Education Category Flat Bootstrap Responsive website Template | Contact :: w3layouts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
-    <meta name="keywords" content="Indoctrination Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+    <meta name="keywords" content="Indoctrination Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 	SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
     <script>
         addEventListener("load", function () {
@@ -23,8 +23,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         }
     </script>
     <!-- Custom Theme files -->
-    <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+    <link href="{% static 'home/bootstrap.css' %}" type="text/css" rel="stylesheet" media="all">
+    <link href="{% static 'home/style.css' %}" type="text/css" rel="stylesheet" media="all">
 	<!-- font-awesome icons -->
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
 	<!-- //Custom Theme files -->
@@ -36,7 +36,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- banner -->
     <div class="inner-banner">
       <!-- header -->
-    <header>	
+    <header>
 		<nav class="mnu navbar-light">
             <div class="logo" id="logo">
                 <h1><a href="index.html">Feedback <span>Form</span></a></h1>
@@ -53,7 +53,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <a href="#">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul>
-                              
+
                                 <li><a href="gallery.html">Gallery</a>
                                 </li>
                             </ul>
@@ -63,7 +63,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </ul>
     </nav>
 </header>
-<!-- //header -->   
+<!-- //header -->
     </div>
 	 <!-- //banner-text -->
 	 	<!--/contact-->
@@ -76,7 +76,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="contact-map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d273690.1704056744!2d-74.59673804968976!3d40.72070782081099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1521532554788" class="map" style="border:0" allowfullscreen=""></iframe>
 				</div>
-				
+
 				<div class="contact_grid_right mt-5">
 					<h6>Please fill this form to contact with us.</h6>
 					<form action="#" method="post">
@@ -208,7 +208,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"></div>
 					</div>
 				</div> -->
-				
+
 			</div>
 		</div>
 	</footer>
