--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,11 +3,10 @@
 <html lang="en">
 
 <head>
-    <title>Indoctrination Education Category Flat Bootstrap Responsive website Template | Home :: w3layouts</title>
+    <title>Homepage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
-    <meta name="keywords" content="Indoctrination Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-	SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
+    <meta name="keywords" content="feedback homepage" />
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
